force-app/main/default/objects/PDRI__TestRun__c/PDRI__TestRun__c.object-meta.xml
<CustomObject>
    <label>Test Run</label>
    <nameField>
        <displayFormat>TR-{0}</displayFormat>
        <label>Test Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>