force-app/main/default/objects/PDRI__TestRun__c/fields/PDRI__ScheduledJobKey__c.field-meta.xml
<CustomField>
    <fullName>PDRI__ScheduledJobKey__c</fullName>
    <label>Scheduled Job Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>