force-app/main/default/objects/PDRI__TestRun__c/fields/PDRI__Status__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Status__c</fullName>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>