force-app/main/default/objects/PDRI__TestRun__c/fields/PDRI__TestRecordId__c.field-meta.xml
<CustomField>
    <fullName>PDRI__TestRecordId__c</fullName>
    <label>Test Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>